Update class info