@@ -22,7 +22,8 @@ import java.util.Arrays;
 import java.util.List;
 
 /**
- * Spring Security configuration with JWT authentication and role-based authorization.
+ * Spring Security configuration with JWT authentication and role-based
+ * authorization.
  * Stateless session management with JWT tokens.
  */
 @Configuration
@@ -31,75 +32,76 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfiguration {
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final AuthenticationProvider authenticationProvider;
-    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+        private final JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final AuthenticationProvider authenticationProvider;
+        private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
 
-    /**
-     * Configure security filter chain
-     */
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                // Disable CSRF (stateless API with JWT)
-                .csrf(AbstractHttpConfigurer::disable)
+        /**
+         * Configure security filter chain
+         */
+        @Bean
+        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+                http
+                                // Disable CSRF (stateless API with JWT)
+                                .csrf(AbstractHttpConfigurer::disable)
 
-                // Enable CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                // Enable CORS
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // Configure authorization rules
-                .authorizeHttpRequests(auth -> auth
-                        // Public endpoints (no authentication required)
-                        .requestMatchers("/api/v1/auth/**").permitAll()
-                        .requestMatchers("/api/v1/branches").permitAll()
-                        .requestMatchers("/swagger-ui/**", "/api-docs/**", "/swagger-ui.html").permitAll()
-                        .requestMatchers("/actuator/health").permitAll()
+                                // Configure authorization rules
+                                .authorizeHttpRequests(auth -> auth
+                                                // Public endpoints (no authentication required)
+                                                .requestMatchers("/api/v1/auth/**").permitAll()
+                                                .requestMatchers("/api/v1/branches").permitAll()
+                                                .requestMatchers("/swagger-ui/**", "/api-docs/**", "/swagger-ui.html")
+                                                .permitAll()
+                                                .requestMatchers("/actuator/health").permitAll()
 
-                        // Admin-only endpoints
-                        .requestMatchers(HttpMethod.POST, "/api/v1/users").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/v1/users/**").hasRole("ADMIN")
+                                                // Admin-only endpoints
+                                                .requestMatchers(HttpMethod.POST, "/api/v1/users").hasRole("ADMIN")
+                                                .requestMatchers(HttpMethod.DELETE, "/api/v1/users/**").hasRole("ADMIN")
 
-                        // Manager and above endpoints
-                        .requestMatchers("/api/v1/courses/*/approve").hasAnyRole("MANAGER", "ADMIN")
-                        .requestMatchers("/api/v1/classes/*/approve").hasAnyRole("CENTER_HEAD", "MANAGER", "ADMIN")
+                                                // Manager and above endpoints
+                                                .requestMatchers("/api/v1/courses/*/approve")
+                                                .hasAnyRole("MANAGER", "ADMIN")
+                                                .requestMatchers("/api/v1/classes/*/approve")
+                                                .hasAnyRole("CENTER_HEAD", "MANAGER", "ADMIN")
 
-                        .anyRequest().authenticated()
-                )
+                                                .anyRequest().authenticated())
 
-                // Configure exception handling
-                .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                )
+                                // Configure exception handling
+                                .exceptionHandling(exception -> exception
+                                                .authenticationEntryPoint(jwtAuthenticationEntryPoint))
 
-                // Stateless session management
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
+                                // Stateless session management
+                                .sessionManagement(session -> session
+                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                // Add authentication provider
-                .authenticationProvider(authenticationProvider)
+                                // Add authentication provider
+                                .authenticationProvider(authenticationProvider)
 
-                // Add JWT filter before UsernamePasswordAuthenticationFilter
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                                // Add JWT filter before UsernamePasswordAuthenticationFilter
+                                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+                return http.build();
+        }
 
-    /**
-     * Configure CORS
-     */
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:4200", "http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        /**
+         * Configure CORS
+         */
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(
+                                List.of("http://localhost:3000", "http://localhost:4200", "http://localhost:5173"));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+                configuration.setExposedHeaders(List.of("Authorization"));
+                configuration.setAllowCredentials(true);
+                configuration.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 }
